Fixed TextShelf spacing issue

--- a/src/index.scss
+++ b/src/index.scss
@@ -283,6 +283,9 @@ img {
       inset-inline-end: calc(var(--gap) * -1);
     }
   }
+  &--item {
+    width: 24rem;
+  }
 }
 
 footer {
